-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 2.4.1
-
None
-
Ubuntu Oneiric x86/32
QtC 2.4.1 from QtSDK
-
ff58b3102c4507517dfc65591de97116ab22b25e 0c597a6f070ebd434d93cc4052f8445e4ba434dc
QtC hangs every time i press enter on a row in a QML file. I ran it in gdb and got the
following stack trace:
#0 0xb1dd2d70 in QmlJS::CodeFormatter::recalculateStateAfter(QTextBlock const&) ()
from /home/cosmo/QtSDK/QtCreator/lib/qtcreator/plugins/Nokia/../../libQmlJS.so.1
#1 0xb1dd4642 in QmlJS::CodeFormatter::updateStateUntil(QTextBlock const&) ()
from /home/cosmo/QtSDK/QtCreator/lib/qtcreator/plugins/Nokia/../../libQmlJS.so.1
#2 0xaf2d7848 in QmlJSEditor::Internal::Indenter::indentBlock(QTextDocument*, QTextBlock const&, QChar const&, TextEditor::TabSettings const&) () from /home/cosmo/QtSDK/QtCreator/lib/qtcreator/plugins/Nokia/libQmlJSTools.so
#3 0xb2cebe5c in TextEditor::Indenter::indent(QTextDocument*, QTextCursor const&, QChar const&, TextEditor::TabSettings const&) ()
from /home/cosmo/QtSDK/QtCreator/lib/qtcreator/plugins/Nokia/libTextEditor.so
#4 0xb2c7afe4 in TextEditor::BaseTextEditorWidget::indent(QTextDocument*, QTextCursor const&, QChar) ()
from /home/cosmo/QtSDK/QtCreator/lib/qtcreator/plugins/Nokia/libTextEditor.so
#5 0xb2c8f5f2 in TextEditor::BaseTextEditorWidget::keyPressEvent(QKeyEvent*) ()
from /home/cosmo/QtSDK/QtCreator/lib/qtcreator/plugins/Nokia/libTextEditor.so
#6 0xb7600560 in QWidget::event(QEvent*) () from /home/cosmo/QtSDK/QtCreator/bin/../lib/qtcreator/libQtGui.so.4
#7 0xb7a4c8c3 in QFrame::event(QEvent*) () from /home/cosmo/QtSDK/QtCreator/bin/../lib/qtcreator/libQtGui.so.4
#8 0xb7ae2f0f in QAbstractScrollArea::event(QEvent*) () from /home/cosmo/QtSDK/QtCreator/bin/../lib/qtcreator/libQtGui.so.4
#9 0xb7b08182 in QPlainTextEdit::event(QEvent*) () from /home/cosmo/QtSDK/QtCreator/bin/../lib/qtcreator/libQtGui.so.4
#10 0xb2c76552 in TextEditor::BaseTextEditorWidget::event(QEvent*) ()
from /home/cosmo/QtSDK/QtCreator/lib/qtcreator/plugins/Nokia/libTextEditor.so
#11 0xaf219f53 in QmlJSEditor::QmlJSTextEditorWidget::event(QEvent*) ()
from /home/cosmo/QtSDK/QtCreator/lib/qtcreator/plugins/Nokia/libQmlJSEditor.so
#12 0xb759f28c in QApplicationPrivate::notify_helper(QObject*, QEvent*) ()
from /home/cosmo/QtSDK/QtCreator/bin/../lib/qtcreator/libQtGui.so.4
#13 0xb75a78b3 in QApplication::notify(QObject*, QEvent*) () from /home/cosmo/QtSDK/QtCreator/bin/../lib/qtcreator/libQtGui.so.4
#14 0xb717e90b in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /home/cosmo/QtSDK/QtCreator/bin/../lib/qtcreator/libQtCore.so.4
#15 0xb759f62e in qt_sendSpontaneousEvent(QObject*, QEvent*) () from /home/cosmo/QtSDK/QtCreator/bin/../lib/qtcreator/libQtGui.so.4
#16 0xb7655a6b in QKeyMapper::sendKeyEvent(QWidget*, bool, QEvent::Type, int, QFlags<Qt::KeyboardModifier>, QString const&, bool, int, unsigned int, unsigned int, unsigned int, bool*) () from /home/cosmo/QtSDK/QtCreator/bin/../lib/qtcreator/libQtGui.so.4
#17 0xb7657a8b in QKeyMapperPrivate::translateKeyEvent(QWidget*, _XEvent const*, bool) ()
from /home/cosmo/QtSDK/QtCreator/bin/../lib/qtcreator/libQtGui.so.4
#18 0xb762ce6d in QApplication::x11ProcessEvent(_XEvent*) () from /home/cosmo/QtSDK/QtCreator/bin/../lib/qtcreator/libQtGui.so.4
#19 0xb765aea4 in x11EventSourceDispatch(_GSource*, int (void*), void*) ()
from /home/cosmo/QtSDK/QtCreator/bin/../lib/qtcreator/libQtGui.so.4
#20 0xb6c4125f in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#21 0xb6c41990 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0