QmlJS indenter: Fix hang with invalid code.

Task-number: QTCREATORBUG-7005

(cherry picked from commit 0c597a6f070ebd434d93cc4052f8445e4ba434dc)

Change-Id: I2e343fbcc6931530e7db142bf6e268dac696970f
Reviewed-by: Christian Kamm <christian.d.kamm@nokia.com>